--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -27,7 +27,7 @@
 	</LinearLayout>
 	<ListView android:layout_height="wrap_content" android:id="@android:id/list"
 		android:layout_width="fill_parent" android:layout_weight="100"
-		android:fastScrollEnabled="false" android:fadeScrollbars="true" />
+		android:fastScrollEnabled="true" android:fadeScrollbars="true" />
 	<TextView android:layout_height="wrap_content" android:id="@android:id/empty"
 		android:text="Use the menu to add new transactions."
 		android:layout_width="fill_parent" android:layout_weight="100"
@@ -78,31 +78,31 @@
 		<ImageButton android:id="@+id/new_transaction_button"
 			android:layout_width="wrap_content" android:layout_height="fill_parent"
 			android:background="@drawable/gradient_button" android:layout_weight="1"
-			android:src="@android:drawable/ic_menu_add"
+			android:src="@drawable/action_add"
 			android:layout_marginRight="1dp" />
 		<ImageButton android:id="@+id/new_transfer_button"
 			android:layout_width="wrap_content" android:layout_height="fill_parent"
 			android:background="@drawable/gradient_button" android:layout_weight="1"
-			android:src="@android:drawable/ic_menu_send"
+			android:src="@drawable/action_exchange"
 			android:layout_marginRight="1dp" />
 		<ImageButton android:id="@+id/search_button"
 			android:layout_width="wrap_content" android:layout_height="fill_parent"
 			android:background="@drawable/gradient_button" android:layout_weight="1"
-			android:src="@android:drawable/ic_menu_search"
+			android:src="@drawable/action_search"
 			android:layout_marginRight="1dp" />
 		<ImageButton android:id="@+id/import_button"
 			android:layout_width="wrap_content" android:layout_height="fill_parent"
 			android:background="@drawable/gradient_button" android:layout_weight="1"
-			android:src="@android:drawable/ic_menu_more"
+			android:src="@drawable/action_import"
 			android:layout_marginRight="1dp" />
 		<ImageButton android:id="@+id/export_button"
 			android:layout_width="wrap_content" android:layout_height="fill_parent"
 			android:background="@drawable/gradient_button" android:layout_weight="1"
-			android:src="@android:drawable/ic_menu_upload"
+			android:src="@drawable/action_export"
 			android:layout_marginRight="1dp" />
 		<ImageButton android:id="@+id/chart_button"
 			android:layout_width="wrap_content" android:layout_height="fill_parent"
 			android:background="@drawable/gradient_button" android:layout_weight="1"
-			android:src="@android:drawable/ic_menu_report_image" />
+			android:src="@drawable/action_chart" />
 	</LinearLayout>
 </LinearLayout>
