--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -72,6 +72,10 @@
 		<item>Automatic backups will run 5 minutes after your most recent change when the option is enabled.</item>
 	</string-array>
 	<string-array name="changelog">
+	    <item>\n
+&#8226; Added action bars to account and transaction list screens\n
+&#8226; Improved aesthetics of the changelog\n
+	    </item>
 		<item>\n
 &#8226; Fixed bug calculating running balance while sorting from top\n
 &#8226; Added optional confirmation when restoring the database\n
@@ -195,6 +199,7 @@
 		</item>
 	</string-array>
 	<string-array name="versions">
+	    <item>2.3.0</item>
 		<item>2.2.3</item>
 	    <item>2.2.2</item>
 	    <item>2.2.1</item>
