--- a/res/layout/trans_row_narrow.xml
+++ b/res/layout/trans_row_narrow.xml
@@ -38,4 +38,8 @@
 				android:lines="1" android:visibility="gone" android:minWidth="80dp" />
 		</LinearLayout>
 	</LinearLayout>
+	<LinearLayout android:id="@+id/SideBar" android:layout_width="wrap_content"
+		android:layout_height="fill_parent" android:minWidth="7dp"
+		android:layout_marginLeft="2dp"
+		android:visibility="gone" />
 </LinearLayout>
