--- a/res/layout/trans_row_narrow_large.xml
+++ b/res/layout/trans_row_narrow_large.xml
@@ -39,4 +39,8 @@
 				android:textSize="16dip" android:visibility="gone" />
 		</LinearLayout>
 	</LinearLayout>
+    <LinearLayout android:id="@+id/SideBar" android:layout_width="wrap_content"
+        android:layout_height="fill_parent" android:minWidth="7dp"
+        android:layout_marginLeft="2dp"
+        android:visibility="gone" />
 </LinearLayout>
