added action bar to main_large.xml

--- a/res/layout/main_large.xml
+++ b/res/layout/main_large.xml
@@ -4,13 +4,13 @@
 	android:orientation="vertical" android:id="@+id/main_layout">
 	<LinearLayout android:layout_height="wrap_content"
 		android:layout_width="fill_parent" android:visibility="gone"
-		android:id="@+id/SearchLayout">
+		android:id="@+id/SearchLayout" android:orientation="vertical">
 		<LinearLayout android:layout_height="wrap_content"
 			android:layout_width="fill_parent" android:orientation="horizontal">
 			<MultiAutoCompleteTextView
 				android:layout_width="wrap_content" android:layout_weight="1"
 				android:id="@+id/SearchEdit" android:layout_height="fill_parent"
-				android:hint="Search" />
+				android:hint="Search" android:completionThreshold="1" />
 			<ImageButton android:layout_width="wrap_content"
 				android:layout_height="wrap_content" android:id="@+id/ClearButton"
 				android:src="@android:drawable/ic_input_delete" />
@@ -27,7 +27,7 @@
 	</LinearLayout>
 	<ListView android:layout_height="wrap_content" android:id="@android:id/list"
 		android:layout_width="fill_parent" android:layout_weight="100"
-		android:fastScrollEnabled="true" />
+		android:fastScrollEnabled="true" android:fadeScrollbars="true" />
 	<TextView android:layout_height="wrap_content" android:id="@android:id/empty"
 		android:text="Use the menu to add new transactions."
 		android:layout_width="fill_parent" android:layout_weight="100"
@@ -75,4 +75,37 @@
 				android:textSize="16dip" />
 		</LinearLayout>
 	</LinearLayout>
+    <LinearLayout android:layout_height="wrap_content"
+        android:layout_width="fill_parent" android:minHeight="32dp"
+        android:id="@+id/ActionLayout">
+        <ImageButton android:id="@+id/new_transaction_button"
+            android:layout_width="wrap_content" android:layout_height="fill_parent"
+            android:background="@drawable/gradient_button" android:layout_weight="1"
+            android:src="@drawable/action_add"
+            android:layout_marginRight="1dp" />
+        <ImageButton android:id="@+id/new_transfer_button"
+            android:layout_width="wrap_content" android:layout_height="fill_parent"
+            android:background="@drawable/gradient_button" android:layout_weight="1"
+            android:src="@drawable/action_exchange"
+            android:layout_marginRight="1dp" />
+        <ImageButton android:id="@+id/search_button"
+            android:layout_width="wrap_content" android:layout_height="fill_parent"
+            android:background="@drawable/gradient_button" android:layout_weight="1"
+            android:src="@drawable/action_search"
+            android:layout_marginRight="1dp" />
+        <ImageButton android:id="@+id/import_button"
+            android:layout_width="wrap_content" android:layout_height="fill_parent"
+            android:background="@drawable/gradient_button" android:layout_weight="1"
+            android:src="@drawable/action_import"
+            android:layout_marginRight="1dp" />
+        <ImageButton android:id="@+id/export_button"
+            android:layout_width="wrap_content" android:layout_height="fill_parent"
+            android:background="@drawable/gradient_button" android:layout_weight="1"
+            android:src="@drawable/action_export"
+            android:layout_marginRight="1dp" />
+        <ImageButton android:id="@+id/chart_button"
+            android:layout_width="wrap_content" android:layout_height="fill_parent"
+            android:background="@drawable/gradient_button" android:layout_weight="1"
+            android:src="@drawable/action_chart" />
+    </LinearLayout>
 </LinearLayout>
