--- a/res/layout/trans_row_wide.xml
+++ b/res/layout/trans_row_wide.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent" android:layout_height="wrap_content"
+	android:layout_width="fill_parent" android:layout_height="fill_parent"
 	android:orientation="horizontal" android:id="@+id/LinearLayout01"
 	android:paddingRight="5dip">
 	<CheckBox android:layout_width="wrap_content"
-		android:layout_height="wrap_content" android:id="@+id/PostedCheckBox"
-		android:layout_marginBottom="-10dip"
-		android:focusable="false" android:focusableInTouchMode="false" android:layout_marginTop="-7dp"/>
+		android:layout_height="fill_parent" android:id="@+id/PostedCheckBox"
+		android:layout_marginBottom="-10dip" android:focusable="false"
+		android:focusableInTouchMode="false" android:layout_marginTop="-7dp" />
 	<LinearLayout android:id="@+id/LinearLayout02"
 		android:layout_width="wrap_content" android:layout_height="fill_parent"
 		android:layout_weight="1" android:orientation="vertical">
@@ -22,7 +22,8 @@
 				android:src="@drawable/ic_gallery" android:visibility="gone" />
 		</LinearLayout>
 		<LinearLayout android:id="@+id/LinearLayout03"
-			android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_marginTop="-5dp">
+			android:layout_height="wrap_content" android:layout_width="fill_parent"
+			android:layout_marginTop="-5dp">
 			<TextView android:layout_width="wrap_content" android:text="2008-10-01"
 				android:id="@+id/DateText" android:ellipsize="end"
 				android:layout_gravity="left|center_vertical" android:paddingRight="0dip"
@@ -39,8 +40,8 @@
 				android:visibility="gone" />
 		</LinearLayout>
 	</LinearLayout>
-    <LinearLayout android:id="@+id/SideBar" android:layout_width="wrap_content"
-        android:layout_height="fill_parent" android:minWidth="7dp"
-        android:layout_marginLeft="2dp"
-        android:visibility="gone" />
+	<LinearLayout android:id="@+id/SideBar"
+		android:layout_width="wrap_content" android:layout_height="fill_parent"
+		android:minWidth="7dp" android:layout_marginLeft="2dp"
+		android:visibility="gone" />
 </LinearLayout>
