--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -116,6 +116,7 @@
 	</string-array>
 	<string-array name="changelog">
 	    <item>\n
+&#8226; Merged base and Premium into a single version.
 &#8226; Added action bars to account and transaction list screens\n
 &#8226; Added feature to jump to transactions when added\n
 &#8226; Improved aesthetics of the changelog\n
@@ -125,7 +126,7 @@
 &#8226; Added option to display different balance on account summary screen\n
 &#8226; Added additional sidebar coloring option\n
 &#8226; Added option to remove transaction type prefixes\n
-&#8226; Fixed a bug which caused crashing when charting based on words with apostrophes in them (Premium)\n
+&#8226; Fixed a bug which caused crashing when charting based on words with apostrophes in them\n
 	    </item>
         <item>\n
 &#8226; Fixed layout issue for Simply Stunning ROM\n
