fixed changelog formatting issue

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -116,7 +116,7 @@
 	</string-array>
 	<string-array name="changelog">
 	    <item>\n
-&#8226; Merged base and Premium into a single version.
+&#8226; Merged base and Premium into a single version\n
 &#8226; Added action bars to account and transaction list screens\n
 &#8226; Added feature to jump to transactions when added\n
 &#8226; Improved aesthetics of the changelog\n
