--- a/res/layout/about.xml
+++ b/res/layout/about.xml
@@ -17,8 +17,8 @@
 			android:autoLink="email" android:textSize="16dip"
 			android:layout_marginBottom="5dip" />
 		<TextView android:layout_height="wrap_content"
-			android:layout_width="fill_parent" android:autoLink="email"
-			android:text="@string/donate" android:textSize="16dip"
+			android:layout_width="fill_parent" android:autoLink="web"
+			android:text="@string/license" android:textSize="16dip"
 			android:layout_marginBottom="5dip" />
 		<TextView android:layout_height="wrap_content"
 			android:layout_width="fill_parent" android:text="@string/javacsv"
@@ -26,13 +26,5 @@
 		<TextView android:layout_height="wrap_content"
 			android:layout_width="fill_parent" android:autoLink="web"
 			android:text="@string/flot" android:textSize="12dip" />
-	</LinearLayout>
-	<LinearLayout android:id="@+id/LinearLayout02"
-		android:layout_height="wrap_content" android:layout_width="fill_parent"
-		android:gravity="center_horizontal">
-		<Button android:text="@string/paypal" android:id="@+id/pp_button"
-			android:layout_width="wrap_content" android:layout_height="fill_parent"
-			android:layout_gravity="center_horizontal" />
-
 	</LinearLayout>
 </LinearLayout>
